--- a/src/components/SectionFutureQuotes/section-future-quotes.css
+++ b/src/components/SectionFutureQuotes/section-future-quotes.css
@@ -18,16 +18,16 @@
 	}
 
 	.section-future-quotes .quotes-slides .slide{
-		padding:0 60px
+		padding:0 60px 60px
 		}
+
+		.section-future-quotes .quotes-slides .slick-initialized .slide{
+			padding:0 60px
+			}
 
 	.section-future-quotes .quotes-slides .slide blockquote{
-		margin:25px auto 75px;
+		margin:auto
 		}
-
-		.section-business-quotes .quotes-slides .slick-initialized .slide blockquote{
-			margin:auto
-			}
 
 	.section-future-quotes .quotes-slides .slide blockquote p{
 		margin:25px auto 50px;
